--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -6,7 +6,8 @@
 }
 
 .hero-img {
-  flex: 1;
+ 
+  flex: 0;
   align-items: center;
   gap: 2rem;
   margin-top: 5rem;
@@ -17,7 +18,6 @@
 
 .hero-img > div {
 display: flex;
-
 align-items: flex-end;
 gap: 1rem;
 }
@@ -38,13 +38,14 @@ gap: 1rem;
 .hero-container::before
 {
 content: "";
-margin-left:20px;
-width: 25rem;
-height: 25rem;
+margin: auto;
+width: 30rem;
+height: 35rem;
 border-radius: 29rem;
-background: rgb(35, 35, 35);
+background: rgb(72, 70, 70);
 position: absolute;
 z-index: -1;
+filter: blur(225px);
 }
 
 
@@ -69,14 +70,14 @@ z-index: -1;
 }
 
 .tech-icon {
-  width: 5rem;
-  height: 5rem;
+  width: 4rem;
+  height: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  border-radius:0.55rem;
-  border: 1.5px solid gray;
+  border-radius:1rem;
+  border: 2px solid gray;
   
 
 }
@@ -88,5 +89,108 @@ z-index: -1;
 }
 
 .hero-img > div > img:hover, .tech-icon img:hover {
-  transform: translateY(-0.5rem);
+  transform: translateY(-0.4rem);
+}
+
+
+@media (max-width: 925px) {
+   .hero-content h2 {
+    font-size: 3rem;
+    line-height: 4rem;
+   }
+
+   .hero-content p {
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+   }
+
+   .hero-img > div > img {
+    width: 15rem;
+    height: 15rem;
+   }
+
+   .tech-icon img {
+    width: 1.5rem;
+   }
+
+   .tech-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+   }
+}
+
+
+@media (max-width:620px) {
+  .hero-container {
+    flex-direction: column;
+  }
+  .my-image {
+    height: 8rem;
+    width: 8rem;
+  }
+  .hero-img {
+    margin: 2rem 0 2rem 0;
+  }
+
+  .hero-container h2 {
+    margin-top: 3rem;
+  }
+
+  .hero-container h2,
+  .hero-content p {
+  width: auto;
+  text-align: center;
+  }
+
+  .hero-container::after,
+  .hero-container::before {
+    content: "";
+    width: 18rem;
+    height: 18rem;
+  }
+
+  .hero-container::after {
+    top: 0rem;
+    left: 0rem;
+  }
+
+  .hero-container::before {
+    bottom: 2rem;
+    right: 0rem;
+  }
+} 
+
+
+@media (max-width:600px) {
+  .hero-content h2 {
+    font-size: 2.2rem;
+    line-height: 3rem;
+  }
+
+  .hero-img > div {
+    gap: 1rem;
+  }
+
+  .hero-img {
+    gap: 1rem;
+  }
+
+  .hero-content p {
+    font-size: 0.8rem;
+    line-height: 1.2rem;
+  }
+
+  .hero-img > div > img {
+    width: 16rem;
+    
+  }
+
+  .tech-icon {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .tech-icon img {
+    width: 2rem;
+  }
 }
