--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 .nav-wrapper {
-  background:rgba (0, 0, 0, 0.1) ;
+  background:rgba(0, 0, 0, 0.1) ;
   padding: 0.5rem 0;
   position:sticky ;
   top: 0;
-  z-index: 30;
+  z-index: 40;
+  border-bottom: 0.5px solid  rgb(80, 77, 77);
   backdrop-filter: blur(50px);
 }
 
