--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -70,7 +70,7 @@
 
 @media (max-width: 700px) {
   .skills-content {
-    flex-direction: column-reverse;
+    flex-direction: column;
     gap: 2rem;
   }
 
