--- a/src/Components/ContactMe/ContactForm/ContactForm.css
+++ b/src/Components/ContactMe/ContactForm/ContactForm.css
@@ -41,6 +41,18 @@ form button {
   cursor: pointer;
 }
 
+@media (max-width:600px) {
+  form button {
+    height: 3rem;
+    font-size: 0.6rem;
+    font-weight: 300;
+    color: white;
+    padding: 0.6rem;
+    border-radius: 0.3rem;
+    
+  }
+}
+
 ::placeholder {
   color: rgb(248, 243, 243);
   opacity: 1; 
@@ -49,6 +61,20 @@ form button {
 form button:hover {
   color: rgb(85, 89, 93);
   background: transparent;
+}
+
+@media (max-width:400px) {
+  .name-container {
+    flex-direction: column-reverse;
+    align-items: flex-start;
+  }
+
+form input,
+form textarea {
+  padding: 0.7rem;
+  border-radius: 0.3rem;
+}
+
 }
 
 
