--- a/src/Components/ContactMe/ContactMe.css
+++ b/src/Components/ContactMe/ContactMe.css
@@ -8,6 +8,7 @@
   font-size: 1.5rem;
   font-weight: 600;
   margin-top: 3rem;
+  margin-bottom: 2rem;
 }
 
 
@@ -16,5 +17,18 @@
 display: flex;
 gap: 3rem;
 
+}
+
+
+@media (max-width:700px) {
+  .contact-content {
+    flex-direction: column-reverse;
+  }
+
+  .contact-container h5 {
+    font-size: 1rem;
+    margin-bottom: 0rem;
+    
+  }
 }
 
