--- a/src/Components/MobileNav/MobileNav.css
+++ b/src/Components/MobileNav/MobileNav.css
@@ -2,8 +2,90 @@
    width: 100vw;
    height: 100vh;
    display: none;
-   background-color: gray;
+ 
+   position: fixed;
    left: 0;
    top: 0;
    z-index: 999 !important ;
+   opacity: 0;
+   box-shadow: 2px 29px 80px rgb(48, 43, 43);
+   transition: all 0.3s ease;
+   transform: translateX(-100vw);
+   border-radius: 7rem;
 }
+
+.mobile-menu-container {
+   width: 60vw;
+   height: 100vw;
+   background-color: rgb(83, 81, 79);
+   padding: 2rem;
+border-bottom-right-radius: 1rem;
+}
+
+
+.mobile-menu.active {
+   opacity: 1;
+   transform: translateX(0);
+}
+
+.mobile-menu img {
+   margin-bottom: 3rem;
+}
+
+
+.mobile-menu ul {
+   display: flex;
+   flex-direction: column;
+   gap: 2rem;
+   list-style: circle;
+   margin-left: -2rem;
+}
+
+
+
+@media (max-width:760px) {
+   .mobile-menu {
+      display: block;
+
+   }
+}
+
+
+.close-tab {
+   display: flex;
+   float:right;
+}
+
+.close-tab-icon{
+   width: 2rem;
+   height: 2rem;
+ margin-left: -3.5px;
+ margin-top: 1px;
+}
+
+.close-tab-button {
+
+   height: 2.5rem;
+   width: 2.5rem;
+   border-radius: 0.5rem;
+   background: linear-gradient(rgb(16, 14, 14), rgb(106, 101, 101) 100%);
+ 
+}
+
+.close-tab-button:hover {
+   background: rgb(96, 90, 90);
+   cursor:pointer;
+}
+
+.contact-again {
+   margin-top: 3rem;
+   
+}
+
+
+.close-tab-button:hover {
+   color: gray;
+   outline: 1.5px solid rgb(173, 173, 191);
+   box-shadow: 3px inset;
+ }
+ 
