--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -71,7 +71,7 @@ margin: 0 1.5rem;
   display: flex;
   justify-content: center;
   color: white;
-  background: linear-gradient(white, gray 100%);
+  background: linear-gradient(rgb(27, 26, 26), rgb(106, 101, 101) 100%);
   padding: 0.5rem 2rem;
   border: none;
   outline: 1.5px solid transparent;
