--- a/src/Components/ContactMe/ContactMe.css
+++ b/src/Components/ContactMe/ContactMe.css
@@ -9,6 +9,7 @@
   font-weight: 600;
   margin-top: 3rem;
   margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 
@@ -28,8 +29,10 @@ gap: 3rem;
   }
 
   .contact-container h5 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin-bottom: 0rem;
+    margin-bottom: 2rem ;
+    font-weight: 400;
     
   }
 }
