--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -7,7 +7,7 @@
   align-items: center;
   flex-direction: column;
   line-height: 2rem;
-  margin-top: 2rem;
+  margin-top: 3.5rem;
 }
 
 h5:hover {
@@ -23,7 +23,7 @@ h2 {
   flex-direction: column;
   display: flex;
 grid-gap: 3.5rem;
-margin-left: 6rem;
+margin-left: 9rem;
 }
 
 .project-description {
@@ -153,4 +153,18 @@ flex-direction: row;
 
 .first-project-icon {
   margin-top: -7rem;
+}
+
+
+.second-project-icon,
+.third-project-icon {
+  width: 10rem;
+  height: 10rem;
+  margin-top: -7rem;
+}
+
+.second-project-icon:hover,
+.third-project-icon:hover {
+  height: 12rem;
+ width: 12rem;
 }
