--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -20,3 +20,15 @@ h3 {
  
 }
 
+
+@media (max-width:900px) {
+  .education-container {
+    flex-direction: column; 
+    margin-left: 5rem;
+  }
+
+}
+
+
+
+
