--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -30,5 +30,15 @@ h3 {
 }
 
 
+@media (max-width:500px) {
+  .education-container {
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+  }
+
+}
+
+
 
 
