--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -33,8 +33,7 @@ h3 {
 @media (max-width:500px) {
   .education-container {
     flex-direction: column; 
-    justify-content: center;
-    align-items: center;
+    margin-left: 1rem;
   }
 
 }
